# Compile-Time-Graph-Library

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  algorithm.h  algorithm_test.cpp  ctgl.cpp  ctgl.h  graph.h  graph_test.cpp  list.h  list_test.cpp  makefile  utility.h
src/: README.md
src/cpp/: ctgl.cpp
src/h/: algorithm.h  ctgl.h  graph.h  list.h  path.h  utility.h
src/test/: algorithm_test.cpp  forge.h  graph_test.cpp  list_test.cpp  path_test.cpp
